# pdf-toolkit-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: development.md  overview.md  roadmap.md  test-spec.md  usage.md
src/: lib.rs  main.rs
src/cli/: mod.rs
src/core/: error.rs  mod.rs  ranges.rs  simple_pdf.rs  tests.rs  types.rs
src/core/pdf_engine/: links.rs  merge.rs  mod.rs  outlines.rs  split.rs  write.rs
src/core/simple_pdf/: inspect.rs  mod.rs  ops.rs  split.rs
tests/: cli_smoke.rs  create_blank_skill.rs  extract_pages_skill.rs  golden_cli_outputs.rs  merge_skill.rs  metadata_edit_skill.rs  page_range_engine.rs  perf_smoke.rs  public_cases_legacy_compat.rs  public_cases_manifest.rs  public_compat_cases.rs  remove_pages_skill.rs  reorder_pages_skill.rs  rotate_pages_skill.rs  split_skill.rs
tests/public_cases/: pdf_js_minimal_info_case.json  pdfium_info_version_case.json  pdfjs_range_dedupe_case.json  qpdf_extract_subset_case.json  qpdf_merge_smoke_case.json
